<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/nowhere"
    tools:context=".activity.interaction.ChooseLevelActivity">

    <Button
        android:id="@+id/Level1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161.5dp"
        android:layout_marginTop="82dp"
        android:layout_marginEnd="161.5dp"
        android:text="@string/level_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.059" />

    <Button
        android:id="@+id/Level2"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="161.5dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="162dp"
        android:text="@string/level_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Level1"
        app:layout_constraintVertical_bias="0.01999998" />

    <Button
        android:id="@+id/Level3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161.5dp"
        android:layout_marginTop="135dp"
        android:layout_marginEnd="161.5dp"
        android:text="@string/level_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Level2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:text="@string/choose_a_level_below"
        app:layout_constraintBottom_toTopOf="@+id/Level1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>