<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/game3Layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.game.Game3Activity">

    <TextView
        android:id="@+id/game3Score"
        android:layout_width="130dp"
        android:layout_height="35dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="133dp"
        android:layout_marginBottom="680dp"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FF5722"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/pushButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="279dp"
        android:layout_marginTop="524dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="110dp"
        android:background="#40000000"
        android:text="@string/p"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/rightButton"
        android:layout_width="36dp"
        android:layout_height="40dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="524dp"
        android:layout_marginEnd="168dp"
        android:layout_marginBottom="100dp"
        android:background="#40000000"
        android:text="@string/r"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.642" />

    <Button
        android:id="@+id/downButton"
        android:layout_width="36dp"
        android:layout_height="40dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="573dp"
        android:layout_marginEnd="242dp"
        android:layout_marginBottom="70dp"
        android:background="#40000000"
        android:text="@string/d"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.795" />

    <Button
        android:id="@+id/upButton"
        android:layout_width="36dp"
        android:layout_height="40dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="476dp"
        android:layout_marginEnd="242dp"
        android:layout_marginBottom="130dp"
        android:background="#40000000"
        android:text="@string/u"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.516" />

    <Button
        android:id="@+id/leftButton"
        android:layout_width="36dp"
        android:layout_height="40dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="524dp"
        android:layout_marginEnd="318dp"
        android:layout_marginBottom="100dp"
        android:background="#40000000"
        android:text="@string/l"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.642" />

    <Button
        android:id="@+id/insButton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="284dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="659dp"
        android:background="#40000000"
        android:text="@string/INSTRUCTION"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.869"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/game3Lives"
        android:layout_width="130dp"
        android:layout_height="35dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="133dp"
        android:layout_marginBottom="651dp"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FF5722"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>